[package]
name = "http-muncher"
version = "0.3.1"
authors = ["Nikita Baksalyar <nikita.baksalyar@gmail.com>"]
build = "build.rs"
description = "Rust Streaming HTTP parser based on nodejs/http-parser"
documentation = "http://nbaksalyar.github.io/rust-streaming-http-parser/"
repository = "https://github.com/nbaksalyar/rust-streaming-http-parser"
keywords = ["http", "web"]
license = "MIT"

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"
